--- a/_custom.scss
+++ b/_custom.scss
@@ -18,7 +18,7 @@ $profile-name-color: rgb(218, 210, 210);
     margin-bottom: 2rem;
 }
 @mixin empty-div{
-    background-color: whitesmoke;
+    background-color: $profile-name-color;
     border-radius: 5px;
     width: 300px;
     height: 300px;
