--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ nav ul a:hover {
 }
 
 .empty-div {
-  background-color: whitesmoke;
+  background-color: #dad2d2;
   border-radius: 5px;
   width: 300px;
   height: 300px;
@@ -89,12 +89,19 @@ nav ul a:hover {
 }
 
 .skills-container {
-  display: flex;
-  justify-content: space-between;
+  margin: auto;
 }
 
 .skills-icon {
   font-size: 3rem;
+}
+
+.skills-icon:hover {
+  transform: scale(1.2);
+}
+
+#project .card-style:hover {
+  transform: scale(1.2);
 }
 
 .project-btn {
@@ -113,5 +120,36 @@ nav ul a:hover {
   color: #a39898;
   cursor: pointer;
   text-decoration: none;
+}
+
+.form-container {
+  max-width: 70%;
+  margin: auto;
+}
+
+form .form-list input {
+  background-color: transparent;
+}
+
+form .form-list input:focus {
+  background-color: transparent;
+  border: 1px solid #85b985;
+}
+
+form .form-list textarea {
+  background-color: transparent;
+}
+
+form .form-list textarea:focus {
+  background-color: transparent;
+  border: 1px solid #85b985;
+}
+
+form button {
+  background-color: #85b985;
+  display: block;
+  margin: 2rem auto;
+  padding: 1rem 3rem;
+  text-transform: capitalize;
 }
 /*# sourceMappingURL=index.css.map */
