--- a/index.scss
+++ b/index.scss
@@ -13,9 +13,6 @@ body{
     color: rgb(163, 152, 152);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
 }
-// nav .nav-sect{
-//     position: fixed;
-// }
 nav ul a:hover{
     background-color: rgb(214, 205, 205);
     color: rgb(25, 25, 37);
@@ -67,13 +64,21 @@ nav ul a:hover{
 }
 // SKILLS
 .skills-container{
-    display: flex;
-    justify-content: space-between;
+    margin: auto;
 }
 .skills-icon{
     font-size: 3rem
 }
+.skills-icon:hover{
+    transform: scale(1.2);
+}
 // PROJECT STYLING
+#project .card-style:hover{
+    transform: scale(1.2);
+}
+// .card-style img{
+//     width: 100%
+// }
 .project-btn{
     @include project-btn;
 }
@@ -81,4 +86,30 @@ nav ul a:hover{
     color: $nav-text-color;
     cursor: pointer;
     text-decoration: none;
+}
+// CONTACT
+.form-container{
+    max-width: 70%;
+    margin: auto;
+}
+form .form-list input{
+    background-color: transparent;
+}
+form .form-list input:focus{
+    background-color: transparent;
+    border: 1px solid $green-color;
+}
+form .form-list textarea{
+    background-color: transparent;
+}
+form .form-list textarea:focus{
+    background-color: transparent;
+    border: 1px solid $green-color;
+}
+form button{
+    background-color: $green-color;
+    display: block;
+    margin: 2rem auto;
+    padding: 1rem 3rem;
+    text-transform: capitalize;
 }
